kubernetes/test/ingress/ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: nginx-ingress
spec:
  tls:
    - hosts:
        - www.ravithummala.com
      secretName: admin-app-cert
  rules:
    - host: www.ravithummala.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 8080
